--- a/Algorithm Practice/Algorithm Practice/Algorithm Practice.vcxproj.filters
+++ b/Algorithm Practice/Algorithm Practice/Algorithm Practice.vcxproj.filters
@@ -117,5 +117,11 @@
     <ClCompile Include="11724.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="10451.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="2667.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
