--- a/Algorithm Practice/Algorithm Practice/Algorithm Practice.vcxproj.filters
+++ b/Algorithm Practice/Algorithm Practice/Algorithm Practice.vcxproj.filters
@@ -204,5 +204,8 @@
     <ClCompile Include="1916.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="2669.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
